# chunkLint

./: .gitignore  CHANGELOG.md  CLAUDE.md  ChunkLint_Technical_PRD.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
chunklint/: __init__.py  cli.py  config.py  engine.py  loader.py  models.py  normalizer.py  reporter.py
chunklint/adapters/: langchain.py  llamaindex.py
chunklint/rules/: __init__.py  base.py  boundary.py  code_block.py  duplicate.py  markdown_table.py  missing_heading.py  missing_id.py  missing_source.py  missing_text.py  pdf_noise.py  size.py
chunklint/utils/: metadata.py  severity.py  text.py
docs/: README.md  cli.md  rules.md  sdk.md  testing.md
examples/: bad_chunks.json  github_action.yml  langchain_example.py  llamaindex_example.py
tests/: test_adapters.py  test_boundary_rules.py  test_cli.py  test_code_rule.py  test_config.py  test_duplicate_rule.py  test_json_schema.py  test_loader.py  test_missing_rules.py  test_pdf_noise_rule.py  test_reporter.py  test_sdk_quiet.py  test_table_rule.py
