[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chunklint"
version = "1.0.0"
description = "A static analyzer for RAG chunks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ChunkLint contributors" }]
keywords = ["rag", "lint", "chunks", "vector-database", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
  "rapidfuzz>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/prabhath004/chunkLint"
Repository = "https://github.com/prabhath004/chunkLint"
Issues = "https://github.com/prabhath004/chunkLint/issues"
Changelog = "https://github.com/prabhath004/chunkLint/blob/main/CHANGELOG.md"

[project.optional-dependencies]
langchain = [
  "langchain-core",
  "langchain-community",
]
llamaindex = [
  "llama-index-core",
]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[project.scripts]
chunklint = "chunklint.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
  "SIM108",  # ternary vs if/else is a readability call we make per case
  "B008",    # typer uses default-arg call sites (typer.Option / typer.Argument)
]

